WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202987
Fix GCC warning on MIPS about dead variable metadata
https://bugs.webkit.org/show_bug.cgi?id=202987
Summary
Fix GCC warning on MIPS about dead variable metadata
Paulo Matos
Reported
2019-10-15 06:45:53 PDT
Fix GCC warning on MIPS about dead variable metadata
Attachments
Patch
(1.49 KB, patch)
2019-10-15 06:46 PDT
,
Paulo Matos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Paulo Matos
Comment 1
2019-10-15 06:46:34 PDT
Created
attachment 380981
[details]
Patch
Keith Miller
Comment 2
2019-10-15 08:51:03 PDT
Comment on
attachment 380981
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2019-10-16 00:36:23 PDT
Comment on
attachment 380981
[details]
Patch Clearing flags on attachment: 380981 Committed
r251180
: <
https://trac.webkit.org/changeset/251180
>
WebKit Commit Bot
Comment 4
2019-10-16 00:36:24 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-10-16 00:37:16 PDT
<
rdar://problem/56322891
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug