Fix GCC warning on MIPS about dead variable metadata https://bugs.webkit.org/show_bug.cgi?id=202987

Patch by Paulo Matos <pmatos@linki.tools> on 2019-10-16
Reviewed by Keith Miller.

* jit/JITPropertyAccess32_64.cpp:
(JSC::JIT::emit_op_get_internal_field):

Canonical link: https://commits.webkit.org/216456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251180 268f45cc-cd09-0410-ab3c-d52691b4dbfc